# multi-block-env

./: .gitignore  Dockerfile  README.md  blog.md  openenv.yaml  pyproject.toml  server.py
env/: __init__.py  base.py  long_horizon.py  rubrics.py
env/blocks/: __init__.py  code_gen.py  reasoning.py  task_split.py
env/rewards/: __init__.py  multi_reward.py
tests/: test_env.py
trainer/: env_client.py  train_ppo.py  train_unsloth.py
